Gtk-4.0: Fix extra gap in search bars

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -68,7 +68,6 @@ read if you used those and something break with a version upgrade you're on your
 @define-color wm_button_active_color_b shade(#1f2430, 0.89);
 @define-color wm_button_active_color_c shade(#1f2430, 0.9);
 @define-color content_view_bg #232936;
-@define-color text_view_bg #232936;
 @define-color budgie_tasklist_indicator_color #ffcc66;
 @define-color budgie_tasklist_indicator_color_active #ffcc66;
 @define-color placeholder_text_color #616a7b;
@@ -4178,8 +4177,7 @@ switch {
 /************
  * Toolbars *
  ************/
-toolbar, .inline-toolbar, searchbar,
-.location-bar {
+toolbar, .inline-toolbar, searchbar > revealer > box {
   padding: 4px;
   background-color: #1f2430; }
 
@@ -4211,18 +4209,15 @@ toolbar {
   border-width: 0 1px 1px;
   border-radius: 0  0 5px 5px; }
 
-searchbar,
-.location-bar {
+searchbar > revealer > box {
   border-width: 0 0 1px;
   padding: 3px; }
 
-.inline-toolbar, searchbar,
-.location-bar {
+.inline-toolbar, searchbar > revealer > box {
   border-style: solid;
   border-color: #13161d;
   background-color: #1b202a; }
-  .inline-toolbar:backdrop, searchbar:backdrop,
-  .location-bar:backdrop {
+  .inline-toolbar:backdrop, searchbar > revealer > box:backdrop {
     border-color: #14171f;
     background-color: #1b1f2a;
     box-shadow: none;
